RESOLVED FIXED164781
The jsc shell's setImpureGetterDelegate() should ensure that the set value is an ImpureGetter.
https://bugs.webkit.org/show_bug.cgi?id=164781
Summary The jsc shell's setImpureGetterDelegate() should ensure that the set value is...
Mark Lam
Reported 2016-11-15 11:17:47 PST
Patch coming.
Attachments
proposed patch. (3.40 KB, patch)
2016-11-15 11:30 PST, Mark Lam
ggaren: review+
Mark Lam
Comment 1 2016-11-15 11:18:23 PST
Mark Lam
Comment 2 2016-11-15 11:30:18 PST
Created attachment 294857 [details] proposed patch.
Geoffrey Garen
Comment 3 2016-11-15 11:33:20 PST
Comment on attachment 294857 [details] proposed patch. r=me
Michael Saboff
Comment 4 2016-11-15 11:35:31 PST
Comment on attachment 294857 [details] proposed patch. View in context: https://bugs.webkit.org/attachment.cgi?id=294857&action=review > JSTests/stress/jsc-setImpureGetterDelegate-on-bad-type.js:2 > +// This test passes if it does not crash or triggers any assertion failures. How about "trigger" singular?
Mark Lam
Comment 5 2016-11-15 11:36:49 PST
(In reply to comment #4) > Comment on attachment 294857 [details] > proposed patch. > > View in context: > https://bugs.webkit.org/attachment.cgi?id=294857&action=review > > > JSTests/stress/jsc-setImpureGetterDelegate-on-bad-type.js:2 > > +// This test passes if it does not crash or triggers any assertion failures. > > How about "trigger" singular? Thanks. Fixed.
Mark Lam
Comment 6 2016-11-15 11:45:30 PST
Thanks for the reviews. Landed in r208741: <http://trac.webkit.org/r208741>.
Note You need to log in before you can comment on or make changes to this bug.