The jsc shell's setImpureGetterDelegate() should ensure that the set value is an ImpureGetter. https://bugs.webkit.org/show_bug.cgi?id=164781 <rdar://problem/28418590>

Reviewed by Geoffrey Garen and Michael Saboff.

JSTests:

* stress/jsc-setImpureGetterDelegate-on-bad-type.js: Added.

Source/JavaScriptCore:

* jsc.cpp:
(functionSetImpureGetterDelegate):



Canonical link: https://commits.webkit.org/182455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208741 268f45cc-cd09-0410-ab3c-d52691b4dbfc